Changed to use Integer.valueOf()
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/sierra-client-eclipse@3927 d02ae147-ee12-4a35-9452-91c89e8b2592