@@ -453,7 +453,7 @@ public class ServerImportPage extends WizardPage {
 		GridData buttonData = new GridData(GridData.FILL_HORIZONTAL);
 		button.setLayoutData(buttonData);
 
-		button.setData(new Integer(id));
+		button.setData(Integer.valueOf(id));
 		button.setText(label);
 
 		if (defaultButton) {
